# allan_work_saad

./: 1a04CxZpECprv.cer  1a04CxZpECpub.cer  README.md  boot_public_rsa_cert.pem  ota_config.c  ota_config.h  rsa_private.pem
CAP_PTL+OTA/: logic.txt  partition_table.csv  sdkconfig  sdkconfig.old
CAP_PTL+OTA/.metadata/: version.ini
CAP_PTL+OTA/.metadata/.plugins/org.eclipse.core.resources/.projects/.org.eclipse.egit.core.cmp/: .location
CAP_PTL+OTA/.metadata/.plugins/org.eclipse.core.resources/.root/: 2.tree
CAP_PTL+OTA/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
CAP_PTL+OTA/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
CAP_PTL+OTA/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
CAP_PTL+OTA/components/esp-google-iot/: .cproject  .project
CAP_PTL+OTA/components/esp-google-iot/examples/smart_outlet/: .cproject  .project
CAP_PTL+OTA/components/esp-google-iot/iot-device-sdk-embedded-c/: .project
CAP_PTL+OTA/main/: CMakeLists.txt  GCP_MQTT.c  GCP_MQTT.h  JWT_MAIN.c  JWT_MAIN.h  OTA_JWT.c  OTA_JWT.h  main_task.cpp  main_task.h  ota_config.c  ota_config.c.bak  ota_config.h  partition_table.csv  request_save_boot_url.c  request_save_boot_url.h  tasks_common.h  wifi_app.c  wifi_app.h
CAP_PTL+OTA/main/webpage/: alzoid_private_key.pem  alzoid_public_key.pem  app.js  index.html
